final commit for week 1
APK included

--- a/week1/Java1Project/res/values/strings.xml
+++ b/week1/Java1Project/res/values/strings.xml
@@ -5,8 +5,10 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="shirts">Shirts</string>
-    <string name="jeans">Shirts</string>
-    <string name="shoes">Shirts</string>
+    <string name="jeans">Jeans</string>
+    <string name="shoes">Shoes</string>
+    <string name="total">Total Outfit Price</string>
+    <string name="discount">Full Outfit Discounted Price</string>
    
     
 
