--- a/week2/Java1week2/res/values/strings.xml
+++ b/week2/Java1week2/res/values/strings.xml
@@ -4,5 +4,13 @@
     <string name="app_name">Java1week2</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string-array name="compArray">
+        <item>Macbook Air</item>
+        <item>Macbook Pro</item>
+        <item>Macbook Pro with Retina Display</item>
+        <item>iMac</item>
+        <item>Mac Mini</item>
+        <item>Mac Pro</item>
+    </string-array>
 
 </resources>
