--- a/week4/Java1week3/res/values/strings.xml
+++ b/week4/Java1week3/res/values/strings.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">The Fragile Samples</string>
+    <string name="app_name">NIN The Fragile Sampler</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string-array name="genreArray">
-        <item >The Fragile</item>
-        <item >Into The Void</item>
-        <item>The Day The World Went Away</item>
-        <item>Just Like You Imagined</item>
-        <item>Somewhat Damaged</item>
-        <item>Were In This Together</item>
+        <item >Song 1</item>
+        <item >Song 2</item>
+        <item>Song 3</item>
+        <item>Song 4</item>
+        <item>Song 5</item>
+        <item>Song 6</item>
     </string-array>
     <string name="header">Select a song from the list to see the info</string>
     <string name="show_song_info">Show Song Info</string>
